# aisc-plugin-performance

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
a4s_plugin_performance/: __init__.py  calibration_metrics.py  classif_performance.py  iterators.py  regression_performance.py  utils.py
datasets/classification/: rf_cls_model.onnx  testing_data.csv  training_data.csv
datasets/regression/: rf_reg_model.onnx  testing_data.csv  training_data.csv
datasets/time_series/: testing_data.csv  training_data.csv
src/a4s_plugin_performance/: base_performance_plugin.py  config_form.py  data_input_provider.py  iterators.py  model_input_provider.py  utils.py
src/a4s_plugin_performance/classification/: calibration_metrics.py  plugin.py
src/a4s_plugin_performance/regression/: plugin.py
src/predictive_insights/: __init__.py  base_performance_plugin.py  data_input_provider.py  model_input_provider.py  utils.py
src/predictive_insights/classification/: credit_scoring_config.json  plugin.py
src/predictive_insights/regression/: plugin.py
src/vera_plugin_performance/: base_performance_plugin.py  data_input_provider.py  iterators.py  utils.py
src/vera_plugin_performance/classification/: plugin.py
src/vera_plugin_performance/regression/: plugin.py
tests/: __init__.py  test_base_performance_plugin.py  test_calibration_metrics.py  test_classification_plugin.py  test_config_form.py  test_data_input_provider.py  test_iterators.py  test_model_input_provider.py  test_regression_plugin.py  test_sklearn_vs_onnx.py  test_utils.py
