[project]
name = "a4s-plugin-performance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a4s-plugin-interface",
    "numpy>=2.4.1",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
a4s-plugin-interface = { git = "https://github.com/lux-ai-factory/a4s-plugin-interface" }

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "skl2onnx>=1.20.0",
    "ty>=0.0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
