[project]
name = "predictive-insights"
version = "0.2.0"
description = "VERA Dashboard plugin for evaluating model performance metrics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vera-plugin-interface",
    "numpy>=2.4.1",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "skl2onnx>=1.20.0",
    "ty>=0.0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
vera-plugin-interface = { git = "https://github.com/lux-ai-factory/vera-plugin-interface"  }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
